// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Endpoint parameter tables should be omitted if all of their respective parameters are marked with \`x-hidden\` 1`] = `
"<div class="openapi">

# HiddenEndpointParameters

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

### Cookies

#|||
 **Name** 
|
 **Description** 
||

||
 accessToken 
|
 **Type:** string

Access token 
|||#

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Endpoint parameter tables should not include parameters marked with \`x-hidden\` in the spec 1`] = `
"<div class="openapi">

# HiddenEndpointParameters

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

### Query parameters

#|||
 **Name** 
|
 **Description** 
||

||
 name 
|
 **Type:** string

Name for the requested star 
|||#

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;
